--- a/History.rdoc
+++ b/History.rdoc
@@ -1,3 +1,8 @@
+= 1.8.4 (2010-07-02)
+
+ * Fix unfibered usage of memcache-client in EM
+ * Remove nag message (tenderlove)
+
 = 1.8.3 (2010-04-26)
 
  * Don't allow blank keys. (Bill Horsman)
